# hielo

./: .envrc  Cargo.toml  Cross.toml  Dioxus.toml  LICENSE  README-nix.md  README.md  flake.nix
.github/workflows/: build-release.yml  build.yml  ci.yml
scripts/: test-ui-setup.sh
src/: analytics.rs  catalog.rs  catalog_ui.rs  components.rs  config.rs  data.rs  iceberg_adapter.rs  left_nav.rs  main.rs
tests/: README.md  global-setup.ts  global-teardown.ts  package.json  playwright.config.ts  tsconfig.json
tests/scripts/: run-with-xvfb.sh
tests/specs/: app-startup.spec.ts  basic-functionality.spec.ts
tests/types/: global.d.ts
tests/utils/: test-helpers.ts
thoughts/shared/plans/: 2025-01-29-snapshot-health-dashboard.md
